bug fixes for ArrayPush and ArrayPop in 32_64 DFG JIT https://bugs.webkit.org/show_bug.cgi?id=69696

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-07
Reviewed by Filip Pizlo.

On 32-bit, we should use TimesEight (8) instead of ScalePtr (4)
to compute the address of a JS array element.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/85753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97003 268f45cc-cd09-0410-ab3c-d52691b4dbfc